tests/semantic/invalid/end-block-close.inox
Module InvalidEndBlockClose

Main() :
    if true
        PutLn("bad")
    End
;
